<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hk="http://schemas.android.com/apk/res/keyboard.cheetahphotokeyboard.neon"
    android:key="prefs_view"
    android:title="@string/pref_screen_view_title" >

    <PreferenceCategory
        android:key="graphics_settings"
        android:title="@string/pref_screen_view_title" >
        <keyboard.cheetahphotokeyboard.neon.seting.Oto_Text_Refrence_Sumry
            android:defaultValue="@string/default_hint_mode"
            android:entries="@array/hint_modes"
            android:entryValues="@array/hint_modes_values"
            android:key="pref_hint_mode"
            android:persistent="true"
            android:title="@string/title_hint_mode" />

        <keyboard.cheetahphotokeyboard.neon.moden.My_Keybord_Progress_bar
            android:defaultValue="1.0"
            android:key="pref_label_scale"
            android:persistent="true"
            android:title="@string/title_label_scale"
            hk:asPercent="true"
            hk:logScale="true"
            hk:maxValue="8.0"
            hk:minValue="0.5" />
        <keyboard.cheetahphotokeyboard.neon.moden.My_Keybord_Progress_bar
            android:defaultValue="1.0"
            android:key="pref_candidate_scale"
            android:persistent="true"
            android:title="@string/title_candidate_scale"
            hk:asPercent="true"
            hk:logScale="true"
            hk:maxValue="8.0"
            hk:minValue="0.5" />
        <keyboard.cheetahphotokeyboard.neon.moden.My_Keybord_Progress_bar
            android:defaultValue="1.0"
            android:key="pref_top_row_scale"
            android:persistent="true"
            android:title="@string/title_top_row_scale"
            hk:asPercent="true"
            hk:maxValue="1.0"
            hk:minValue="0.5"
            hk:step="0.05" />

        <CheckBoxPreference
            android:defaultValue="@bool/default_compact_mode_enabled"
            android:key="pref_compact_mode_enabled"
            android:persistent="true"
            android:summaryOff="@string/summary_compact_mode_enabled"
            android:summaryOn="@string/summary_compact_mode_enabled"
            android:title="@string/title_compact_mode_enabled" />

        <keyboard.cheetahphotokeyboard.neon.seting.Oto_Text_Refrence_Sumry
            android:defaultValue="@string/default_render_mode"
            android:entries="@array/render_mode_entries"
            android:entryValues="@array/render_mode_values"
            android:key="pref_render_mode"
            android:persistent="true"
            android:title="@string/title_render_mode" />
    </PreferenceCategory>

</PreferenceScreen>